--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Malla Curricular - Obstetricia</h1>
+    <h1>Malla Curricular - Obstetricia y Puericultura</h1>
     <div id="malla-container"></div>
-    <footer>Hecho con cariño por Helena Meléndez ❤️</footer>
+    <footer>♡ Hecho con cariño por Helena Meléndez ♡</footer>
     <script src="js/data.js"></script>
     <script src="js/script.js"></script>
 </body>
