--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Malla Curricular Obstetricia</title>
+    <title>Malla Obstetricia y Puericultura♡</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <h1>Malla Curricular - Obstetricia y Puericultura</h1>
+    <h1>Malla - Obstetricia y Puericultura ♡</h1>
     <div id="malla-container"></div>
     <footer>♡ Hecho con cariño por Helena Meléndez ♡</footer>
     <script src="js/data.js"></script>
